[package]
name = "filer"
version = "0.1.0"
authors = ["Szymon <szwanot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.18.0" ,default-features = false }
tui = {version = "0.13.0", default-features = false, features = ["crossterm"] }
